--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs": "^4.2.0",
+    "@tensorflow/tfjs-node": "^4.2.0",
     "axios": "^1.2.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
